[package]
name = "you-cant-download-this-image"
version = "0.1.0"
authors = ["radiantly <buildingsomethingfun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls  = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"
futures = "0.3"
lazy_static = "1.4"
async-stream = "0.3"